# python-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/tests/: test_version.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  stub.py  version.py
