[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "A minimal Python package"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flakeheaven = "^3.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
pre-commit = "^3.7.1"
pytest = "^7.0"

[tool.flakeheaven]
ignore = ["E501"]
exclude = [".git", "__pycache__", ".venv", "venv"]
max-complexity = 10
max-line-length = 88
select = ["E", "F", "W", "C90"]

[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
mccabe = ["+*"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
